--- a/app/templates/account.html
+++ b/app/templates/account.html
@@ -17,6 +17,15 @@
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">Account Info</legend>
                 <div class="form-group">
+                    {% if current_user.reputation >= 30 %}
+                       <h3 style="color: seagreen;">Reputation Score: {{current_user.reputation}}</h3>
+                    {% elif current_user.reputation >= 0 %}
+                        <h3>Reputation Score: {{current_user.reputation}}</h3>
+                    {% elif current_user.reputation < 0 %}
+                        <h3 style="color: red;">Reputation Score: {{current_user.reputation}}</h3>
+                    {% endif %} 
+                </div>
+                <div class="form-group">
                     {{ form.username.label(class="form-control-label") }}
 
                     {% if form.username.errors %}
