--- a/app/static/main.css
+++ b/app/static/main.css
@@ -1,5 +1,5 @@
 body {
-    background: #fafafa;
+    background: white;
     color: #333333;
     margin-top: 5rem;
 }
@@ -77,4 +77,11 @@ a.article-title:hover {
 
 .account-heading {
     font-size: 2.5rem;
+}
+
+.logo {
+    margin: 10px auto 20px;
+    display: block;
+    height: 100px;
+    width: 100px;
 }
