added documentation directory

--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -85,7 +85,7 @@
                                     <li class="list-group-item list-group-item" style="color: red;"><b>Reputation Score: {{ current_user.reputation }}</b></li>
                                 {% endif %}
                             {% else %}
-                                <li class="list-group-item list-group-item-light">Latest Posts</li>
+                                <li class="list-group-item list-group-item-light">Howdy Visitor!</li>
                             {% endif %}
                             <li class="list-group-item list-group-item-light">Announcements</li>
                             <li class="list-group-item list-group-item-light">Your Groups</li>
