--- a/app/templates/template.html
+++ b/app/templates/template.html
@@ -69,8 +69,8 @@
             </div>
             <div class="col-md-4">
                 <div class="content-section">
-                    <h3>Our Sidebar</h3>
-                    <p class='text-muted'>You can put any information here you'd like.
+                    <h3>Information: </h3>
+                    <p class='text-muted'>You can pick any of the options listed below: 
                         <ul class="list-group">
                             {% if current_user.is_authenticated %}
                                 {% if current_user.reputation >= 3 %}
@@ -87,9 +87,10 @@
                             {% else %}
                                 <li class="list-group-item list-group-item-light">Howdy Visitor!</li>
                             {% endif %}
-                            <li class="list-group-item list-group-item-light">Announcements</li>
-                            <li class="list-group-item list-group-item-light">Your Groups</li>
-                            <li class="list-group-item list-group-item-light">etc</li>
+                            <li class="list-group-item list-group-item-light">Groups</li>
+                            <li class="list-group-item list-group-item-light">Projects</li>
+                            <li class="list-group-item list-group-item-light">Compliments</li>
+                            <li class="list-group-item list-group-item-light">Complaints</li>
                         </ul>
                     </p>
                 </div>
